2017-02-24 Werner S Freund
	* Tagging RingerCore-01-01-00

2017-02-20 Werner S Freund
	* Improving watch lock when saving files;
	* Not tagging

2017-02-19 Werner S Freund
	* Improved inspect_list_attrs to also work in the singleton cases
	* FileIO can now list files with full path or not
	* Added hadd_chunk script
	* Tagging RingerCore-01-01-00d

2017-02-14 Werner S Freund
	* Added lock file class
	* Not tagging

2017-02-14 Werner S Freund
	* Allow git tags to have letters after the tagging numbers.
	* Tagging RingerCore-01-01-00c

2017-02-14 Werner S Freund
	* Important bug fix on inspect_list_attrs which would span dimension using
	the same instances. Besides the fix, it will now by default work on 
	deepcopy of the instances now.
	* Tagging RingerCore-01-01-00b

2017-02-13 Werner S Freund
	* Added support to AnalysisBase integration
	* Added firstItemDepth to LoopingBounds module
	* Log messages now show Cxx. prefix when logging from that side.
	* Fix in GitConfiguration
	* Added firstItemDepth to LoopingBounds;
	* Added method reducePowerOf10Str
	* Fixed Git.py incompatibility on RootCore side
	* Tagging RingerCore-01-01-00a

2017-01-04 Werner S Freund
	* Protect expandFolders from keeping folders in the returned list
	* Tagging RingerCore-01-00-24

2017-01-04 Werner S Freund
	* Added method to check whether item is in LoopingBounds
	* Tagging RingerCore-01-00-23

2017-12-21 Werner S Freund
	* Fix for the git tag also accept commits in the git describe str
	* Set development to be auto configured only when first requested
	allowing user to manual set it before if needed.
	* development is now a Configure instance instead of the resulting int
	* Tagging RingerCore-01-00-22

2017-12-20 Werner S Freund
	* Fix on traverse with max_depth_level.
	* Improve rawDict speed by loading keys when they are not in
	ignore list
	* Tagging RingerCore-01-00-21.

2017-12-18 Werner S Freund
	* Improved git version retrieval when .git file is a folder instead of a